syntax = "proto3";

package grpc;

option csharp_namespace = "TournamentService.BusinessLogic.Protos";

service DisciplineService{
    rpc CheckDiscipline (CheckRequest) returns (CheckResponse);
}

message CheckRequest {
    string Id = 1;
}

message CheckResponse {
    bool IsExists = 1;
}
