syntax = "proto3";

package grpc;

option csharp_namespace = "TournamentService.BusinessLogic.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service TournamentService{
    rpc CreateMatches (AddMatchesRequest) returns (google.protobuf.Empty);
    rpc GetMatchById (GetByIdRequest) returns (Match);
    rpc GetMatchByRound (GetByRoundRequest) returns (Match);
    rpc UpdateMatch (Match) returns (google.protobuf.Empty);
}

message GetByIdRequest {
    string Id = 1;
}

message GetByRoundRequest {
    string Name = 1;
    string tournamentId = 2;
}

message AddMatchesRequest {
    repeated Match matches = 1;
}

message Match {
    string id = 1;
    string round = 2;
    google.protobuf.Timestamp startTime = 3;
    int32 status = 4;
    int32 matchOrder = 5;
    int32 winScore = 6;
    int32 looseScore = 7;
    google.protobuf.Timestamp endTime = 8;
    string categoryId = 9;
    google.protobuf.StringValue winnerId = 10;
    string participant1Id = 11;
    string participant2Id = 12;
    string tournamentId = 13;
    google.protobuf.StringValue nextMatchId = 14;
    string ownerId = 15;
}